deploy: 0d3a4d4defd7f27ca3b83419a9f639ba39b38ab3

--- a/print.html
+++ b/print.html
@@ -1055,7 +1055,7 @@ go build -o tools
 <p>To increase your stake with provers you’ve already delegated to, visit the <em>Dashboard</em> tab and use the <em>Stake More</em> option.</p>
 <p><img src=".gitbook/assets/Screenshot 2026-01-06 at 15.49.14.png" alt=""><figcaption></figcaption></p>
 <h4 id="dashboard"><a class="header" href="#dashboard">Dashboard</a></h4>
-<p>The <em>Dashboard</em> tab displays your total stake and detailed information for each prover, including staked amount, pending unstake amount, and withdrawable amount.</p>
+<p>The <a href="https://prover-network-explorer-test.netlify.app/dashboard">Dashboard</a> tab displays your total stake and detailed information for each prover, including staked amount, pending unstake amount, and withdrawable amount.</p>
 <ul>
 <li><strong>Your Total Stake</strong>: All BREV staked across provers plus earned rewards. Rewards compound automatically on a daily basis.</li>
 <li><strong>Staked Amount</strong>: BREV currently staked with a specific prover.</li>
