deploy: ff598404c8ceb66ba89ad8338754fd9e4a635687

--- a/print.html
+++ b/print.html
@@ -37,7 +37,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-f7cb4551.js";
+            window.path_to_searchindex_js = "searchindex-4f10ca9d.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc-9a48437a.js"></script>
@@ -1042,7 +1042,7 @@ go build -o tools
 <p>ProverNet staking currently operates on Base. Before you start staking, you may need to bridge BREV to Base using <a href="https://cbridge.celer.network/1/8453/BREV">cBridge</a>.</p>
 <p><img src=".gitbook/assets/Screenshot 2026-01-06 at 15.28.54.png" alt=""><figcaption></figcaption></p>
 <h4 id="view-active-provers"><a class="header" href="#view-active-provers">View Active Provers</a></h4>
-<p>If a prover fails to meet its SLA commitments, delegated stake may be slashed. Evaluate provers carefully and adjust your delegation periodically. </p>
+<p>Choosing provers with a record of actively participating and consistently meeting deadlines is essential for maximizing your potential rewards. While slashing is currently disabled, a prover’s performance may impact overall staking rewards; reliable nodes ensure your delegated stake remains productive.</p>
 <p>Visit the <a href="https://provernet.brevis.network/">Brevis Prover Network</a> to view all active provers along with key statistics including BREV staked, proofs generated, and fees earned.</p>
 <h4 id="stake-brev"><a class="header" href="#stake-brev">Stake BREV</a></h4>
 <p>To stake, connect your wallet and select a prover. </p>
