deploy: db8da354b4de9db4ca52f1afe24fea12b5a9c9d9

--- a/print.html
+++ b/print.html
@@ -37,7 +37,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-4f10ca9d.js";
+            window.path_to_searchindex_js = "searchindex-99238cee.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc-9a48437a.js"></script>
@@ -688,7 +688,7 @@ make logs-gnark
 <div style="break-before: page; page-break-before: always;"></div>
 <h1 id="initialize-prover-account"><a class="header" href="#initialize-prover-account">Initialize Prover Account</a></h1>
 <p>Before your bidder server can participate in the marketplace, you must register your prover identity on-chain. ProverNet is currently deployed on Base Mainnet. </p>
-<p>Because the BREV token is originally issued on Ethereum, you must bridge your tokens to Base to meet the self-staking requirements. The BREV token address on Base is <code>0x086F405146Ce90135750Bbec9A063a8B20A8bfFb</code>.</p>
+<p>Because the BREV token is originally issued on Ethereum, you must <a href="https://cbridge.celer.network/1/8453/BREV"><strong>bridge</strong></a> your tokens to Base to meet the self-staking requirements (currently 1000 BREV). The BREV token address on Base is <code>0x086F405146Ce90135750Bbec9A063a8B20A8bfFb</code>.</p>
 <h3 id="prover-and-submitter-roles"><a class="header" href="#prover-and-submitter-roles">Prover and Submitter Roles</a></h3>
 <p>To maximize security, ProverNet decouples the prover and submitter roles. This allows you to maintain your prover account (which holds your staked BREV and identity) in a secure hardware or cold wallet, while running the automated bidder service with a separate submitter hot wallet that signs and submits proofs operationally.</p>
 <h3 id="register-your-prover-identity"><a class="header" href="#register-your-prover-identity">Register Your Prover Identity</a></h3>
