deploy: a3ab2724f87b0d78c6d67530f1d349a6f06ad4c6

--- a/print.html
+++ b/print.html
@@ -37,7 +37,7 @@
             const path_to_root = "";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "searchindex-99238cee.js";
+            window.path_to_searchindex_js = "searchindex-82e599d9.js";
         </script>
         <!-- Start loading toc.js asap -->
         <script src="toc-9a48437a.js"></script>
@@ -1078,6 +1078,7 @@ go build -o tools
 <div style="break-before: page; page-break-before: always;"></div>
 <h1 id="contract-addresses"><a class="header" href="#contract-addresses">Contract Addresses</a></h1>
 <p>Brevis ProverNet currently operates on Base Mainnet. This page lists the primary contract addresses required for provers, stakers, developers, and users interacting with the network.</p>
+<p>Base BreivsToken: <a href="https://basescan.org/address/0x086F405146Ce90135750Bbec9A063a8B20A8bfFb">0x086F405146Ce90135750Bbec9A063a8B20A8bfFb</a></p>
 <p>StakingController: <a href="https://basescan.org/address/0x9c0D8C5F10f0d3A02D04556a4499964a75DBf4A3">0x9c0D8C5F10f0d3A02D04556a4499964a75DBf4A3</a></p>
 <p>StakingViewer: <a href="https://basescan.org/address/0x659F4172BEd39DeDF6D3f02a0A8AD5719Eafe41F">0x659F4172BEd39DeDF6D3f02a0A8AD5719Eafe41F</a></p>
 <p>BrevisMarket: <a href="https://basescan.org/address/0xcCec2a9FE35b6B5F23bBF303A4e14e5895DeA127">0xcCec2a9FE35b6B5F23bBF303A4e14e5895DeA127</a></p>
